--- a/client-2/src/components/main-view/main-view.scss
+++ b/client-2/src/components/main-view/main-view.scss
@@ -3,8 +3,11 @@
 }
 
 .main-view {
-    width: 85%;
     justify-content: center;
     margin: auto;
     font-family: 'Noto Sans', sans-serif;
+    padding:10px 30px
   }
+.profile-view {
+  margin-right: 2px;
+}
