--- a/client/src/components/genre-view/genre-view.scss
+++ b/client/src/components/genre-view/genre-view.scss
@@ -2,25 +2,18 @@
     box-sizing: border-box;
 }
 
-.movie-view {
+.genre-info {
+    text-align: center;
     justify-content: center;
     margin: auto;
     font-family: 'Noto Sans', sans-serif;
   }
 
-  .button-back{
+  .button-card{
     margin:10px;
     padding:5px;
   }
 
-div.text-center{
-  margin:10px;
-}
-
-.movie-title{
-  font-weight: bold;
-}
-
-.btn-sm {
-  margin:12px;
-}
+  .genre-name{
+    font-weight: bold;
+  }
