Task 3.5 Final version

--- a/client/src/components/movie-view/movie-view.scss
+++ b/client/src/components/movie-view/movie-view.scss
@@ -3,24 +3,33 @@
 }
 
 .movie-view {
-    justify-content: center;
+    display: flex;
     margin: auto;
     font-family: 'Noto Sans', sans-serif;
   }
 
   .button-back{
-    margin:10px;
+    margin:20px;
     padding:5px;
   }
 
-div.text-center{
-  margin:10px;
-}
-
 .movie-title{
   font-weight: bold;
+  text-align: center;
 }
 
 .btn-sm {
-  margin:12px;
+  margin:6px;
+}
+
+p.movie-info{
+  display: inline;
+}
+
+img.movie-poster{
+  float: left;
+  margin-left: auto;
+  margin-right: auto;
+  width: 35%;
+  padding:10px;
 }
