--- a/client/src/components/profile-view/profile-view.scss
+++ b/client/src/components/profile-view/profile-view.scss
@@ -15,6 +15,11 @@
   font-family: 'Noto Sans', sans-serif;
 }
 
+div.profile-title{
+  text-align: center;
+  font-weight: bold;
+}
+
 .update-title {
   font-weight: bold;
 }
@@ -23,10 +28,14 @@
   margin: 10px;
 }
 
-.card-img-top {
+.card-img-top.profile-logo{
     width: 30%;
   }
 
 .row{
   margin-top:10px;
+}
+
+p.favouriteMovies{
+  display: inline;
 }
