implemented Redux & styling adjustments

--- a/client/src/components/login-view/login-view.scss
+++ b/client/src/components/login-view/login-view.scss
@@ -13,3 +13,16 @@
 .btn-submit, .btn-register{
   margin: 10px;
 }
+
+img.camera-logo{
+  width:45px;
+}
+
+h1.main-title{
+  font-size: 2rem;
+  margin-bottom: 25px;
+}
+
+.form-group{
+  margin-top:12px;
+}
