--- a/client/src/components/profile-view/profile-view.scss
+++ b/client/src/components/profile-view/profile-view.scss
@@ -6,6 +6,10 @@
   justify-content: center;
   margin: auto;
   font-family: 'Noto Sans', sans-serif;
+  border: 1px solid rgba(0,0,0,.125);
+  border-radius: .25rem;
+  padding:20px;
+  width:50%;
 }
 
 .profile-view{
@@ -17,10 +21,6 @@
 
 div.profile-title{
   text-align: center;
-  font-weight: bold;
-}
-
-.update-title {
   font-weight: bold;
 }
 
@@ -38,4 +38,16 @@ div.profile-title{
 
 p.favouriteMovies{
   display: inline;
+}
+
+img.update-img{
+  padding:10px;
+}
+
+p.update-title{
+  font-size:20px;
+}
+
+div.profile-view.card{
+  margin:auto;
 }
