--- a/client/src/components/registration-view/registration-view.scss
+++ b/client/src/components/registration-view/registration-view.scss
@@ -13,3 +13,15 @@
 .button-register{
   background-color:#8B9BA5;
 }
+
+h4 {
+  text-align:center;
+  margin:10px auto;
+}
+
+img.camera-logo{
+  width:45px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
